; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_drop_monitor.c_net_dm_monitor_stop.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_drop_monitor.c_net_dm_monitor_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netlink_ext_ack = type { i32 }

@TRACE_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, %struct.netlink_ext_ack*)* @net_dm_monitor_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @net_dm_monitor_stop(i32 %0, i32 %1, %struct.netlink_ext_ack* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.netlink_ext_ack*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.netlink_ext_ack* %2, %struct.netlink_ext_ack** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load %struct.netlink_ext_ack*, %struct.netlink_ext_ack** %6, align 8
  %11 = call i32 @net_dm_hw_monitor_stop(%struct.netlink_ext_ack* %10)
  br label %12

12:                                               ; preds = %9, %3
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %12
  %16 = load i32, i32* @TRACE_OFF, align 4
  %17 = load %struct.netlink_ext_ack*, %struct.netlink_ext_ack** %6, align 8
  %18 = call i32 @set_all_monitor_traces(i32 %16, %struct.netlink_ext_ack* %17)
  br label %19

19:                                               ; preds = %15, %12
  ret void
}

declare dso_local i32 @net_dm_hw_monitor_stop(%struct.netlink_ext_ack*) #1

declare dso_local i32 @set_all_monitor_traces(i32, %struct.netlink_ext_ack*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
